--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,10 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="profile-container w-75 d-flex mx-auto justify-content-around align-items-center border-bottom py-5">
+  <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", class:"rounded-circle"; %>
+  <h5 class="profile-name display-4"><%= @user.name %></h5>
+  <h5 class="profile-name display-4"><%= @user.introduction %></h5>
+  <% if @user.id == current_user.id %>
+    <div class="mt-auto">
+    <p><%= link_to "プロフィール編集", edit_user_path(@user), class:"text-dark" %></p>
+    </div>
+  <% end %>
+</div>
