--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,59 +1,48 @@
 <body>
-  <p class="green-text"><%= notice %></p>
-  <h1>Books</h1>
-  <% if @books.present? %>
-    <table class="book-list">
-      <thead>
-        <tr>
-          <th>Title</th>
-          <th>Body</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @books.each do |book| %>
-        <tr>
-        　<td><%= book.title %></td>
-        　<td><%= book.body %></td>
-          <td><%= link_to "Show", book_path(book) %></td>
-          <td><%= link_to "Edit", edit_book_path(book) %></td>
-          <td><%= link_to "Destroy", book_path(book), method: :delete, data: {confirm: "Are you sure?"} %></td>
-        </tr>
-        <% end %>
-      </tbody>
-    </table>
-  <% end  %>
+  <main>
+    <p class="green-text"><%= notice %></p>
+    <div class="container px-5 px-sm-0">
+      <% if @book.errors.any? %>
+        <div id="error_explanation">
+          <% if @book.errors.count == 1 %>
+            <h3><%= @book.errors.count %> error prohibited this book from being saved:</h3>
+          <% else %>
+            <h3><%= @book.errors.count %> errors prohibited this book from being saved:</h3>
+          <% end %>
+          <% @book.errors.full_messages.each do |message| %>
+          <br><%= message %>
+          <% end %>
+        </div>
+      <% end %>
 
+      <div class="row">
+        <%= render 'books/left', user: current_user %>
 
-
-
-  <h2>New Book</h2>
-
-  <% if @book.errors.any? %>
-    <div class="red-text">
-    <% if @book.errors.count == 1 %>
-      <%= @book.errors.count %> error prohibited this book from being saved:
-    <% else %>
-      <%= @book.errors.count %> errors prohibited this book from being saved:
-    <% end %>
-
-    <% @book.errors.full_messages.each do |message| %>
-    <br><%= message %>
-    <% end %>
+        <div class="col-md-8 offset-md-1">
+          <% if @books.present? %>
+            <h2>Books</h2>
+            <table class="table table-hover table-inverse">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th>Title</th>
+                  <th>Opinion</th>
+                  <th colspan="3"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @books.each do |book| %>
+                <tr>
+                  <td><%= book.user_id %></td>
+                　<td><%= book.title %></td>
+                　<td><%= book.body %></td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
+          <% end %>
+        </div>
+      </div>
     </div>
-  <% end %>
-
-  <%= form_with model: @book, local:true do |f| %>
-    <div class="field">
-      <label for="book_title">Title</label>
-      <%= f.text_field :title %>
-    </div>
-    <div class="field">
-      <label for="book_body">Body</label>
-      <%= f.text_area :body %>
-    </div>
-    <div class="actions">
-      <%= f.submit 'Create Book' %>
-    </div>
-  <% end %>
+  </main>
 </body>
