--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,40 @@
+<body>
+  <main>
+    <p class="green-text"><%= notice %></p>
+    <div class="container px-5 px-sm-0">
+      <div class="row">
+        <%= render 'books/left', user: current_user %>
+
+        <div class="col-md-8 offset-md-1">
+          <% if @books.present? %>
+            <h2>Books</h2>
+            <table class="table table-hover table-inverse">
+              <thead>
+                <tr>
+                  <th></th>
+                  <th>Title</th>
+                  <th>Opinion</th>
+                  <th colspan="3"></th>
+                </tr>
+              </thead>
+              <tbody>
+                <% @books.each do |book| %>
+                <tr>
+                  <td><%= book.user_id %></td>
+                　<td><%= book.title %></td>
+                　<td><%= book.body %></td>
+                　<td><%= link_to "Show", book_path(book) %></td>
+                  <td><%= link_to "Edit", edit_book_path(book) %></td>
+                  <td><%= link_to "Destroy", book_path(book), method: :delete, data: {confirm: "Are you sure?"} %></td>
+                </tr>
+                <% end %>
+              </tbody>
+            </table>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </main>
+</body>
+
 <%= render 'books/left', user: current_user %>
