--- a/app/views/books/_left.html.erb
+++ b/app/views/books/_left.html.erb
@@ -15,7 +15,7 @@
   </table>
 
   <div class="row">
-    <%= link_to '', edit_user_path(current_user.id), class: 'btn btn-outline-secondary btn-block fas fa-user-cog edit_user_43503' %>
+    <%= link_to '', edit_user_path(current_user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog edit_user_43503' %>
   </div>
 
   <h2 class="mt-3">New Book</h2>
@@ -23,14 +23,14 @@
   <%= form_with model: @book, local:true do |f| %>
     <div class="form-group">
       <label for="book_title">Title</label>
-      <%= f.text_field :title %>
+      <%= f.text_field :title, class:"form-control" %>
     </div>
     <div class="form-group">
       <label for="book_body">Opinion</label>
-      <%= f.text_area :body %>
+      <%= f.text_area :body, class:"form-control" %>
     </div>
     <div class="actions">
-      <%= f.submit 'Create Book' %>
+      <%= f.submit 'Create Book', class:"btn btn-success" %>
     </div>
   <% end %>
 </div>
