--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,30 +18,7 @@
       <div class="row">
         <%= render 'books/left', user: current_user %>
 
-        <div class="col-md-8 offset-md-1">
-          <% if @books.present? %>
-            <h2>Books</h2>
-            <table class="table table-hover table-inverse">
-              <thead>
-                <tr>
-                  <th></th>
-                  <th>Title</th>
-                  <th>Opinion</th>
-                  <th colspan="3"></th>
-                </tr>
-              </thead>
-              <tbody>
-                <% @books.each do |book| %>
-                <tr>
-                  <td><%= book.user_id %></td>
-                　<td><%= book.title %></td>
-                　<td><%= book.body %></td>
-                </tr>
-                <% end %>
-              </tbody>
-            </table>
-          <% end %>
-        </div>
+        <%= render 'books/right', books: @books %>
       </div>
     </div>
   </main>
