--- a/app/views/books/_right.html.erb
+++ b/app/views/books/_right.html.erb
@@ -15,14 +15,15 @@
                 <tr>
                   <td>
                     <%= link_to user_path(book.user_id) do %>
-                      <%= attachment_image_tag book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+                      <%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg" %>
                     <% end %>
                   </td>
-                　<td><%= book.title %></td>
+                　<td>
+                    <%= link_to book_path(book) do %>
+                      <%= book.title %>
+                    <% end %>
+                　</td>
                 　<td><%= book.body %></td>
-                　<td><%= link_to "Show", book_path(book) %></td>
-                  <td><%= link_to "Edit", edit_book_path(book) %></td>
-                  <td><%= link_to "Destroy", book_path(book), method: :delete, data: {confirm: "Are you sure?"} %></td>
                 </tr>
               <% end %>
             </tbody>
