--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,5 +1,30 @@
-<div>
-  <p>タイトル：<%= @book.title %></p>
-  <p>ボディー：<%= @book.body %></p>
-  <p>ユーザーネーム：<%= @book.user.name %></p>
-</div>
+<body>
+  <main>
+    <p class="green-text"><%= notice %></p>
+    <div class="container px-5 px-sm-0">
+      <div class="row">
+        <%= render 'books/left', user: current_user %>
+        <div class="col-md-8 offset-md-1">
+          <h2>Book Detail</h2>
+          <table class="table">
+            <tbody>
+             <tr>
+                <td>
+                  <%= link_to user_path(@book.user_id) do %>
+                    <%= attachment_image_tag @book.user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg" %>
+                    <br><%= @book.user.name %>
+                  <% end %>
+                </td>
+                <td><%= @book.title %></td>
+                <td><%= @book.body %></td>
+                <% if @book.user_id == current_user.id %>
+                  <td><%= link_to "Edit", edit_book_path(@book) %></td>
+                  <td><%= link_to "Destroy", book_path(@book), method: :delete, data: {confirm: "Are you sure?"} %></td>
+                <% end %>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+    </div>
+  </main>
+</body>
