--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,34 +11,51 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
-      <li>
-        <%= link_to "Home", user_path(current_user.id) %>
-      </li>
-      <li>
-        <%= link_to "Users", users_path %>
-      </li>
-      <li>
-        <%= link_to "Books", books_path %>
-      </li>
-      <li>
-        <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "Home", root_path %>
-      </li>
-      <li>
-        <%= link_to "About", root_path %>
-      </li>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <%= link_to root_path, class: "navbar-brand" do %>
+            <span>Bookers</span>
+          <% end %>
 
-      <li>
-        <%= link_to "Sign up", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "Log in", new_user_session_path %>
-      </li>
-    <% end %>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <li>
+                  <%= link_to " Home", user_path(current_user.id), class: "fas fa-home nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to " Users", users_path, class: "fas fa-user nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to " Books", books_path, class: "fas fa-book-open nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to " Log out", destroy_user_session_path, method: :delete, class: "fas fa-sign-out-alt nav-link text-light" %>
+                </li>
+              <% else %>
+                <li>
+                  <%= link_to " Home", root_path, class: "fas fa-home nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to " About", root_path, class: "fas fa-link nav-link text-light" %>
+                </li>
+
+                <li>
+                  <%= link_to " Sign up", new_user_registration_path, class: "fas fa-user-plus nav-link text-light" %>
+                </li>
+                <li>
+                  <%= link_to " Log in", new_user_session_path, class: "fas fa-sign-in-alt nav-link text-light" %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
     <%= yield %>
   </body>
 </html>
