--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,30 +1,32 @@
-<div class="container">
-  <div class="row no-gutters">
-    <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
-      <h5 class="text-dark bg-light py-4 mb-0">プロフィール編集</h5>
-      <div class="form-body p-4">
-        <%= form_with model: @user, local: true do |f| %>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" aria-hidden="true"><i class="fas fa-user"></i></span>
+<main>
+  <div class="container">
+    <div class="row no-gutters">
+      <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto text-center shadow-lg rounded px-0 my-5">
+        <h5 class="text-dark bg-light py-4 mb-0">プロフィール編集</h5>
+        <div class="form-body p-4">
+          <%= form_with model: @user, local: true do |f| %>
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" aria-hidden="true"><i class="fas fa-user"></i></span>
+              </div>
+              <%= f.text_field :name, autofocus: true, class:"form-control", id:"inputName", placeholder:"Name"%>
             </div>
-            <%= f.text_field :name, autofocus: true, class:"form-control", id:"inputName", placeholder:"Name"%>
-          </div>
-          <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mb-3" %>
-          <div class="input-group my-3">
-            <label>
-            <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "w-100" %>
-            </label>
-          </div>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" aria-hidden="true"><i class="fas fa-user"></i></span>
+            <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg", class:"mb-3" %>
+            <div class="input-group my-3">
+              <label>
+              <%= f.attachment_field :profile_image, placeholder: "プロフィール画像", class: "w-100" %>
+              </label>
             </div>
-            <%= f.text_field :introduction, class:"form-control", id:"inputIntroduction", placeholder:"Introduction"%>
-          </div>
-          <%= f.submit "変更を保存", class:"btn btn-lg btn-block btn-info mt-5" %>
-        <% end %>
+            <div class="input-group mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" aria-hidden="true"><i class="fas fa-user"></i></span>
+              </div>
+              <%= f.text_field :introduction, class:"form-control", id:"inputIntroduction", placeholder:"Introduction"%>
+            </div>
+            <%= f.submit "変更を保存", class:"btn btn-lg btn-block btn-info mt-5" %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</main>
