--- a/app/views/books/_left.html.erb
+++ b/app/views/books/_left.html.erb
@@ -20,7 +20,7 @@
 
   <h2 class="mt-3">New Book</h2>
 
-  <%= form_with model: @book, local:true do |f| %>
+  <%= form_with model: @nbook, local:true do |f| %>
     <div class="form-group">
       <label for="book_title">Title</label>
       <%= f.text_field :title, class:"form-control" %>
