--- a/app/views/books/_right.html.erb
+++ b/app/views/books/_right.html.erb
@@ -1,31 +1,30 @@
-
-        <div class="col-md-8 offset-md-1">
-          <h2>Books</h2>
-          <table class="table table-hover table-inverse">
-            <thead>
-              <tr>
-                <th></th>
-                <th>Title</th>
-                <th>Opinion</th>
-                <th colspan="3"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <% books.each do |book| %>
-                <tr>
-                  <td>
-                    <%= link_to user_path(book.user_id) do %>
-                      <%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg" %>
-                    <% end %>
-                  </td>
-                　<td>
-                    <%= link_to book_path(book) do %>
-                      <%= book.title %>
-                    <% end %>
-                　</td>
-                　<td><%= book.body %></td>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
+<div class="col-md-8 offset-md-1">
+  <h2>Books</h2>
+  <table class="table table-hover table-inverse">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Title</th>
+        <th>Opinion</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% books.each do |book| %>
+        <tr>
+          <td>
+            <%= link_to user_path(book) do %>
+              <%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg" %>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to book_path(book) do %>
+            <%= book.title %>
+            <% end %>
+        　</td>
+        　<td><%= book.body %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
