--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,1 +1,30 @@
-<%= render 'books/left', user: current_user %>
+<p class="green-text"><%= notice %></p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <%= render 'books/left', user: current_user %>
+     <div>
+      <table>
+        <thead>
+          <tr>
+            <th>image</th>
+            <th>name</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @users.each do |user| %>
+            <tr>
+              <td>
+                <%= attachment_image_tag user, :profile_image, :fill, 40, 40, format:'jpeg', fallback: "no_image.jpg" %>
+              </td>
+              <td><%= user.name %></td>
+              <td><%= link_to "Show", user_path(user) %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+
+
