--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,8 @@
-<body>
-  <main>
-    <p class="green-text"><%= notice %></p>
-    <div class="container px-5 px-sm-0">
-      <div class="row">
-        <%= render 'books/left', user: current_user %>
-        <%= render 'books/right', books: @books %>
-      </div>
-    </div>
-  </main>
-</body>
+<p class="green-text"><%= notice %></p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <%= render 'books/left', user: @user %>
+    <%= render 'books/right', books: @books %>
+  </div>
+</div>
+
