--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,4 @@
-<p class="green-text"><%= notice %></p>
+<p id="notice"><%= notice %></p>
 <div class="container px-5 px-sm-0">
 
   <% if @nbook.errors.any? %>
