--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,10 @@
 
 
 
+div.field, div.actions {
+    margin-bottom: 10px;
+}
+
 .table {
     width: 100%;
     margin-bottom: 1rem;
@@ -28,7 +32,9 @@
 }
 
 
-
+#notice {
+  color: green;
+}
 
 #error_explanation {
   color: red;
