--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
                   <%= link_to " Home", root_path, class: "fas fa-home nav-link text-light" %>
                 </li>
                 <li>
-                  <%= link_to " About", root_path, class: "fas fa-link nav-link text-light" %>
+                  <%= link_to " About", about_path, class: "fas fa-link nav-link text-light" %>
                 </li>
 
                 <li>
@@ -57,6 +57,7 @@
       </nav>
     </header>
     <main>
+      <p id="notice"><%= notice %></p>
       <%= yield %>
     </main>
     <footer>
