--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,9 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <%= render 'books/left', user: current_user %>
-     <div>
-      <table>
+    <div class="col-md-8 offset-md-1">
+      <h2>Users</h2>
+      <table class="table">
         <thead>
           <tr>
             <th>image</th>
