--- a/app/views/books/_right.html.erb
+++ b/app/views/books/_right.html.erb
@@ -13,7 +13,7 @@
       <% books.each do |book| %>
         <tr>
           <td>
-            <%= link_to user_path(book) do %>
+            <%= link_to user_path(book.user_id) do %>
               <%= attachment_image_tag book.user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg" %>
             <% end %>
           </td>
