--- a/app/views/books/_left.html.erb
+++ b/app/views/books/_left.html.erb
@@ -15,10 +15,10 @@
   </table>
 
   <div class="row">
-    <%= link_to '', edit_user_path(current_user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog edit_user_43503' %>
+    <%= link_to '', edit_user_path(user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog edit_user_43503' %>
   </div>
 
-  <h2 class="mt-3">New Book</h2>
+  <h2 class="mt-3">New book</h2>
 
   <%= form_with model: @nbook, local:true do |f| %>
     <div class="form-group">
