--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <%= render 'books/left', user: @book.user %>
     <div class="col-md-8 offset-md-1">
-      <h2>Book Detail</h2>
+      <h2>Book detail</h2>
       <table class="table">
         <tbody>
           <tr>
