--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
                   <%= link_to " Home", user_path(current_user.id), class: "fas fa-home nav-link text-light" %>
                 </li>
                 <li>
-                  <%= link_to " Users", users_path, class: "fas fa-user nav-link text-light" %>
+                  <%= link_to " Users", users_path, class: "fas fa-users nav-link text-light" %>
                 </li>
                 <li>
                   <%= link_to " Books", books_path, class: "fas fa-book-open nav-link text-light" %>
